# point_cloude_segmentation

./: .gitignore  CMakeLists.txt  REPORT.md  TECHNICAL_REPORT.txt
config/: params.yaml
data/: input_data.pcd
include/: ground_seg_cpu.h  ground_seg_gpu.cuh  pcd_io.h  types.h  yaml_parser.h
output/: ground.pcd  nonground.pcd
src/: ground_seg_cpu.cpp  ground_seg_gpu.cu  main.cpp  pcd_io.cpp  yaml_parser.cpp
